--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="contanier">
         <h1>Profile card</h1>
         <div class="cards">
-            <img id="img" src="/img/bb60390f-8325-4d77-a294-d8cedc10097a.jpg " alt="">
+            <img id="img" src="./img/bb60390f-8325-4d77-a294-d8cedc10097a.jpg " alt="">
             <h2>MD SOHEL SHEK</h2>
             <P>Web Developer</P>
             <p>Frontend Developer</p>
