Add the form page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h2>MD SOHEL SHEK</h2>
             <P>Web Developer</P>
             <p>Frontend Developer</p>
-            <button class="btn">Contact me </button>
+            <button class="btn"><a href="form.html">Contact me</a></button>
             <div class="social-media">
                 <a href="https://twitter.com/shek_1798" ><i class="fa-brands fa-x-twitter"></i></a>
                 <a href="https://www.instagram.com/shek_1798/"><i class="fa-brands fa-instagram"></i></a>
