--- a/form.html
+++ b/form.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <title>Form</title>
-    <link rel="stylesheet" href="/form.css">
+    <link rel="stylesheet" href="form.css">
 </head>
 <body>
     <div class="form-div">
@@ -28,11 +28,12 @@
         </div>
         <br>
         <div class="message">
-            <i class="fa-solid fa-message"></i>
-        <textarea cols="35" rows="4" placeholder="Message..." name="Message"></textarea>
+            <div class="messageicon">
+                <i class="fa-solid fa-message"></i>
+            </div>
+        <textarea cols="" rows="4" placeholder="Message..." name="Message"></textarea>
         </div>
         <div class="btn-div">
-            
             <button class="btn"><i class="fa-solid fa-paper-plane"></i>Send
             </button>
         </div>
